--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@astrojs/sitemap": "^3.7.0",
     "@tailwindcss/vite": "^4.2.1",
     "astro": "^5.17.1",
+    "imapflow": "^1.2.10",
+    "nodemailer": "^8.0.1",
     "sharp": "^0.34.5",
     "tailwindcss": "^4.2.1"
   }
